Adds skeleton History page.

--- a/app/pages/history/history.page.html
+++ b/app/pages/history/history.page.html
@@ -1,10 +1,10 @@
 
 <ion-navbar *navbar>
   <ion-title>
-    Tab 2
+    History
   </ion-title>
 </ion-navbar>
 
-<ion-content class="page2">
-
+<ion-content class="history-page">
+  <h2>History</h2>
 </ion-content>
