Adds skeleton Settings page.

--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="meditateTabRoot" tabTitle="Meditate" tabIcon="time"></ion-tab>
   <ion-tab [root]="historyTabRoot" tabTitle="History" tabIcon="list"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
+  <ion-tab [root]="settingsTabRoot" tabTitle="Settings" tabIcon="settings"></ion-tab>
 </ion-tabs>
