Basic mockup for Meditate page.

--- a/app/pages/meditate/meditate.page.html
+++ b/app/pages/meditate/meditate.page.html
@@ -3,5 +3,15 @@
 </ion-navbar>
 
 <ion-content padding class="meditate-page">
-  <h2>Meditate</h2>
+  <div class="time-container">
+    <span class="time-text">5:00</span>
+  </div>
+  <ion-row>
+    <ion-col width-25 offset-25>
+      <button dark block>Start</button>
+    </ion-col>
+    <ion-col width-25>
+      <button dark block>Stop</button>
+    </ion-col>
+  </ion-row>
 </ion-content>
