--- a/app/pages/history/history.page.html
+++ b/app/pages/history/history.page.html
@@ -1,4 +1,3 @@
-
 <ion-navbar *navbar>
   <ion-title>
     History
@@ -6,5 +5,16 @@
 </ion-navbar>
 
 <ion-content class="history-page">
-  <h2>History</h2>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <p>Total duration: <b>2 hours 15 mintues</b></p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-list>
+    <ion-item *ngFor="let session of sessions">
+      {{session.duration}} - {{session.date | date}}
+    </ion-item>
+  </ion-list>
 </ion-content>
