--- a/app/pages/settings/settings.page.html
+++ b/app/pages/settings/settings.page.html
@@ -6,5 +6,21 @@
 </ion-navbar>
 
 <ion-content class="settings-page">
-  <h2>Settings</h2>
+  <ion-list>
+    <ion-list-header>
+      Bell Notifications
+    </ion-list-header>
+    <ion-item>
+      <ion-label>
+        Chime
+      </ion-label>
+      <ion-toggle dark></ion-toggle>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        Vibrate
+      </ion-label>
+      <ion-toggle dark></ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
