--- a/app/pages/meditate/meditate.page.html
+++ b/app/pages/meditate/meditate.page.html
@@ -14,4 +14,27 @@
       <button dark block>Stop</button>
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col width-50 offset-25>
+      <ion-item>
+        <ion-label>Preset</ion-label>
+        <ion-select>
+          <ion-option value="1">5 minutes</ion-option>
+          <ion-option value="2">15 minutes</ion-option>
+          <ion-option value="3">25 minutes</ion-option>
+          <ion-option value="4">35 minutes</ion-option>
+          <ion-option value="5">45 minutes</ion-option>
+          <ion-option value="6">55 minutes</ion-option>
+          <ion-option value="7">65 minutes</ion-option>
+          <ion-option value="8">75 minutes</ion-option>
+          <ion-option value="9">85 minutes</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col width-50 offset-25>
+      <button dark block>Configure</button>
+    </ion-col>
+  </ion-row>
 </ion-content>
