--- a/app/pages/meditate/meditate.page.html
+++ b/app/pages/meditate/meditate.page.html
@@ -4,12 +4,14 @@
 
 <ion-content padding class="meditate-page">
   <div class="time-container">
-    <span class="time-text">{{ duration$ | async }}</span>
+    <span class="time-text">{{ (timerState$ | async).duration }}</span>
   </div>
   <ion-row>
     <ion-col width-25 offset-25>
       <button dark block (click)="onClickStartPause()">
-        <span *ngIf="!isTimerRunning">Start</span>
+        <span *ngIf="!isTimerRunning">
+          {{ (timerState$ | async).isRunning ? 'Pause' : 'Start' }}
+        </span>
         <span *ngIf="isTimerRunning">Pause</span>
       </button>
     </ion-col>
