--- a/app/pages/meditate/meditate.page.html
+++ b/app/pages/meditate/meditate.page.html
@@ -4,7 +4,7 @@
 
 <ion-content padding class="meditate-page">
   <div class="time-container">
-    <span class="time-text">{{ (timerState$ | async).duration }}</span>
+    <span class="time-text">{{ (timerState$ | async).duration | momentTime }}</span>
   </div>
   <ion-row>
     <ion-col width-25 offset-25>
